# ChangeLog for games-arcade/ultrastar-ng
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/ultrastar-ng/Attic/ChangeLog,v 1.3 2007/11/05 18:16:41 mr_bones_ Exp $

*ultrastar-ng-0.2.1 (05 Nov 2007)

  05 Nov 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +ultrastar-ng-0.2.1.ebuild:
  version bump - bug #197876

*ultrastar-ng-0.2.0 (02 Nov 2007)

  02 Nov 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +ultrastar-ng-0.2.0.ebuild:
  version bump - ebuild patch from Vincent via bug #197876

*ultrastar-ng-0.1.4 (06 Jul 2007)

  06 Jul 2007; Tupone Alfredo <tupone@gentoo.org> +metadata.xml,
  +ultrastar-ng-0.1.4.ebuild:
  New package, request bug #163021 by Vincent
