@@ -1,17 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST UltraStar-ng-0.1.4.tar.gz 286764 RMD160 5126e862fd1340c16f6e6c858faa2d8cf7abc5e3 SHA1 e0667ee1434fd0dd02620d484c3719d49a708b36 SHA256 1aa313e8ea9489bb09660f98b0a39af7111f34cdaffd8ed39e5c63e3f9ad80d5
 DIST UltraStar-ng-0.2.1.tar.gz 1687366 RMD160 6ab305e67eabda09951a0e459798c7a66e11d801 SHA1 d0a2bfd8622825ea9f0f7694cdaf1d5f78c50dae SHA256 a93daad488c07217512fbf6a2f5ded39cf71664736dd3a33a725241838554d6d
+DIST ultrastar-songs-1.tar.bz2 6595544 RMD160 ba7521cdb0edc4cdc34deb45380ca98c4d7d8267 SHA1 4b52bb0a11f9d4008e1208c356ffa075033c4236 SHA256 6efe78f8fa66e7fc7a980136cefe9569e080cb154e981f578505944fc88b016c
 EBUILD ultrastar-ng-0.1.4.ebuild 1678 RMD160 d1fd1a0e03e55254ba27e2e3acf2732b15c95711 SHA1 1b4af1dfe0d704cbbfb11953520927dfc6e3c4bd SHA256 0866663eed2e64ccdfb6a2fc8ed19ce877648e069898b10ed833e4c04baa2f8d
 MD5 883082557d8859a12045340bb619248d ultrastar-ng-0.1.4.ebuild 1678
 RMD160 d1fd1a0e03e55254ba27e2e3acf2732b15c95711 ultrastar-ng-0.1.4.ebuild 1678
 SHA256 0866663eed2e64ccdfb6a2fc8ed19ce877648e069898b10ed833e4c04baa2f8d ultrastar-ng-0.1.4.ebuild 1678
+EBUILD ultrastar-ng-0.2.1-r1.ebuild 2270 RMD160 9588258d021398886d78664476f89204da598062 SHA1 2f098b5968aa93bdda4e7a8680ead5445250fe7c SHA256 79691cc0f7d4a66c0f31903fe99e486045a924678af25337369aafb75d0b7e79
+MD5 37e2c133b8731c3de39472cd40939b34 ultrastar-ng-0.2.1-r1.ebuild 2270
+RMD160 9588258d021398886d78664476f89204da598062 ultrastar-ng-0.2.1-r1.ebuild 2270
+SHA256 79691cc0f7d4a66c0f31903fe99e486045a924678af25337369aafb75d0b7e79 ultrastar-ng-0.2.1-r1.ebuild 2270
 EBUILD ultrastar-ng-0.2.1.ebuild 2080 RMD160 3812b22b075165abbdec1e5c01fd4fca8e5dd9fa SHA1 75ca9fb970864b75ff997cb0c7719f9a0b1e8798 SHA256 d50142dda0806fd9f3e8d118d0a61963d0bdb0bd3af964a0eabd50ff8806f7a2
 MD5 6196e642bf3efb6e9055590c871d6198 ultrastar-ng-0.2.1.ebuild 2080
 RMD160 3812b22b075165abbdec1e5c01fd4fca8e5dd9fa ultrastar-ng-0.2.1.ebuild 2080
 SHA256 d50142dda0806fd9f3e8d118d0a61963d0bdb0bd3af964a0eabd50ff8806f7a2 ultrastar-ng-0.2.1.ebuild 2080
-MISC ChangeLog 733 RMD160 39d3f12f7ab658c58ba6bf1689e4d29695f6bc73 SHA1 532578fa7e5fc24b964779c18994e9feeedb2446 SHA256 34ebe97c9a9b12143731dba63f2e0a4d414006d97b34565da242643c949123bd
-MD5 1e4093dcf1a3dc5144461e29d543a466 ChangeLog 733
-RMD160 39d3f12f7ab658c58ba6bf1689e4d29695f6bc73 ChangeLog 733
-SHA256 34ebe97c9a9b12143731dba63f2e0a4d414006d97b34565da242643c949123bd ChangeLog 733
+MISC ChangeLog 920 RMD160 023f213e47e1907808cc02848b56b11056ec6b3a SHA1 7a0eb4aa8dad9c5a0e8601065125738fc47160f5 SHA256 8af2d2481d306fa3d292d87864624129279fa5d1354202a8ffbf31fe7736b981
+MD5 4fbf122aef8c4c944e0f456646c5ce6d ChangeLog 920
+RMD160 023f213e47e1907808cc02848b56b11056ec6b3a ChangeLog 920
+SHA256 8af2d2481d306fa3d292d87864624129279fa5d1354202a8ffbf31fe7736b981 ChangeLog 920
 MISC metadata.xml 248 RMD160 f34766a9679c41655211b3bde35d0a2e85acc167 SHA1 83264686770ba12b46f3bacd8f4e930b60da31c9 SHA256 d47ff3ae6fe8c2a524d1cf07f8e400e1f4d552367879a8d9203180e36bd054ff
 MD5 eb77319718272ce8e0e7c9ae97943d92 metadata.xml 248
 RMD160 f34766a9679c41655211b3bde35d0a2e85acc167 metadata.xml 248
@@ -22,3 +30,13 @@ SHA256 5f3f23391ea939cbd6cb68ec6a01372ed948756b24a4cc2c22b5a1398615e757 files/di
 MD5 0a04165f565d4c5fd8b33bd0f7e06a21 files/digest-ultrastar-ng-0.2.1 259
 RMD160 01e767dfa5e66017b531a2f56218e59310191a44 files/digest-ultrastar-ng-0.2.1 259
 SHA256 39c4b77c2ab7db0c93464243db6bb48a6773651fdf9453d40b08b42c69bf9cb2 files/digest-ultrastar-ng-0.2.1 259
+MD5 eac8463ef0660d8dbc26982b13f8b71c files/digest-ultrastar-ng-0.2.1-r1 518
+RMD160 e232cb2cfced106e7197e9111f8c1cd7e05baf56 files/digest-ultrastar-ng-0.2.1-r1 518
+SHA256 a3ebcaabf291c05ef2aa43bcad290d0bfa49f1e14637ad5607cd3e914068f32b files/digest-ultrastar-ng-0.2.1-r1 518
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.7 (GNU/Linux)
+
+iD8DBQFHVH0p8qKy9+b2Hl0RAvRYAKDWoqDCAedYcp92W+AnT+rmNUr90ACfTjAT
+6mvgowZ9E8HtsaUyVXNxP4k=
+=ccJ1
+-----END PGP SIGNATURE-----
