@@ -1,0 +1,6 @@
+MD5 8df1c7ca15f23e215f4741e3a468dd1e UltraStar-ng-0.2.1.tar.gz 1687366
+RMD160 6ab305e67eabda09951a0e459798c7a66e11d801 UltraStar-ng-0.2.1.tar.gz 1687366
+SHA256 a93daad488c07217512fbf6a2f5ded39cf71664736dd3a33a725241838554d6d UltraStar-ng-0.2.1.tar.gz 1687366
+MD5 c50f0bc7c53530defd6ee2146c2d1894 ultrastar-songs-1.tar.bz2 6595544
+RMD160 ba7521cdb0edc4cdc34deb45380ca98c4d7d8267 ultrastar-songs-1.tar.bz2 6595544
+SHA256 6efe78f8fa66e7fc7a980136cefe9569e080cb154e981f578505944fc88b016c ultrastar-songs-1.tar.bz2 6595544
