@@ -1,6 +1,12 @@
 # ChangeLog for games-arcade/ultrastar-ng
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/ultrastar-ng/Attic/ChangeLog,v 1.3 2007/11/05 18:16:41 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-arcade/cvs-repo/gentoo-x86/games-arcade/ultrastar-ng/Attic/ChangeLog,v 1.4 2007/12/03 22:03:13 tupone Exp $
+
+*ultrastar-ng-0.2.1-r1 (03 Dec 2007)
+
+  03 Dec 2007; Tupone Alfredo <tupone@gentoo.org>
+  +ultrastar-ng-0.2.1-r1.ebuild:
+  Adding ultrastar-songs support. Bug #198283 by Lasse Kärkkäinen
 
 *ultrastar-ng-0.2.1 (05 Nov 2007)
 
